# Mini_Blackboard

./: CMakeLists.txt  main.c
lib/List/: List.c  List.h
lib/Mini Blackboard/Course/: Course.c  Course.h
lib/Mini Blackboard/Person/: Person.c  Person.h
lib/Mini Blackboard/Person/Email/: Email.c  Email.h
lib/Mini Blackboard/Person/PersonName/: PersonName.c  PersonName.h
lib/Mini Blackboard/Person/Student/: Student.c  Student.h
lib/Mini Blackboard/Person/Teacher/: Teacher.h
